# MySQL-Editor-Python

./: CHANGELOG.md  README.md  configurator.py  linux.py  main.py  pyproject.toml  query.py  session.py  settings.py  window.py  windows.py
src/mysql_editor/: backend.py  main.py  query.py  session.py  table_data_view.py  window.py
